frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: expense
  # labels of deployment resource
  labels:
    app: frontend
    tier: web
    project: expense
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
      tier: web
      project: expense
  template:
    metadata:
      labels:
        app: frontend
        tier: web
        project: expense
    spec:
      volumes:
        - name: nginx
          configMap:
            name: nginx
            items:
              - key: nginx.conf
                path: nginx.conf
      containers:
        - name: nginx
          image: joindevops/frontend:1.2.0
          resources:
            # soft limit
            requests:
              memory: "68Mi"
              cpu: "100m"
            # hard limit
            limits:
              memory: "128Mi"
              cpu: "150m"
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: nginx
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
              readOnly: true
